# azoth

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  _typos.toml  output
.github/workflows/: analysis.yml  decompile-diff.yml  rust.yml
crates/analysis/: Cargo.toml  README.md  analyze_obfuscation.sh  obfuscation_analysis_report.md
crates/analysis/src/: comparison.rs  decompile_diff.rs  lib.rs  metrics.rs  obfuscation.rs
crates/analysis/src/dataset/: download.rs  index.rs  manifest.rs  mod.rs  parquet.rs  storage.rs
crates/analysis/src/decompile_diff/: mod.rs  parser.rs
crates/api/: README.md
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/cli/src/commands/: analyze.rs  cfg.rs  dataset.rs  debug.rs  decode.rs  decompile_diff.rs  fuzz.rs  mod.rs  obfuscate.rs  strip.rs  tui.rs
crates/core/: Cargo.toml
crates/core/src/: cfg_ir.rs  compiler.rs  decoder.rs  encoder.rs  hex_bytes.rs  lib.rs  result.rs  seed.rs  strip.rs  validator.rs
crates/core/src/asm_ir/: cfg.rs  item.rs  mod.rs
crates/core/src/cfg_ir/: mod.rs  relocation.rs  trace.rs
crates/core/src/detection/: dispatcher.rs  mod.rs  sections.rs
crates/core/src/strip/: mod.rs  parser.rs
crates/transforms/: Cargo.toml  README.md
crates/transforms/src/: arithmetic_chain.rs  cluster_shuffle.rs  constant_mask.rs  function_dispatcher.rs  jump_address_transformer.rs  lib.rs  mapping.rs  mapping_builder.rs  mba.rs  obfuscator.rs  opaque_predicate.rs  pass.rs  push_split.rs  result.rs  shuffle.rs  slot_shuffle.rs  splice.rs  storage_gates.rs  string_obfuscate.rs
crates/transforms/src/arithmetic_chain/: chain.rs  compiler.rs  mod.rs  reverse.rs  scatter.rs  types.rs
crates/transforms/src/function_dispatcher/: mod.rs  multi_tier.rs  storage.rs  token.rs
crates/transforms/src/function_dispatcher/patterns/: blueprint.rs  byte.rs  byte_selector.rs  controller.rs  layout.rs  mod.rs  multi_tier.rs  packed.rs
crates/transforms/src/function_dispatcher/patterns/multi_tier/: blueprint.rs  layout.rs  mod.rs
crates/tui/: Cargo.toml  README.md
crates/tui/src/: app.rs  data.rs  decompile.rs  event.rs  lib.rs  main.rs  trace.rs
crates/tui/src/format/: bytecode.rs  cache.rs  diff.rs  mod.rs  operation.rs
crates/tui/src/ui/: detail.rs  diff.rs  header.rs  list.rs  mod.rs
crates/verification/: Cargo.toml  README.md
crates/verification/src/: lib.rs  proofs.rs  properties.rs  result.rs  semantics.rs  smt.rs
crates/verification/src/formal/: semantics.rs  smt.rs
docs/: book.toml
docs/src/: SUMMARY.md  analysis.md  cli.md  examples.md  formal_verification.md  introduction.md
docs/src/contributing/: README.md  architecture.md  bounties.md  building.md  shortcuts.md  testing.md
docs/src/core/: README.md  cfg_ir.md  decoder.md  detection.md  encoder.md  strip.md
docs/src/transforms/: README.md
examples/: Cargo.toml
examples/src/: main.rs
test-data/counter/: counter.sol
tests/: Cargo.toml
tests/bytecode/: storage.hex
tests/bytecode/counter/: counter_deployment.hex  counter_runtime.hex
tests/src/: ethereum.rs  lib.rs
tests/src/analysis/: metrics.rs
tests/src/core/: cfg_ir.rs  decoder.rs  encoder.rs  mod.rs  seed.rs  strip.rs
tests/src/core/detection/: dispatcher.rs  sections.rs
tests/src/e2e/: arithmetic_chain_evm.rs  collect_proof.rs  constant_audit.rs  deploy.rs  deployment.rs  determinism.rs  escrow.rs  ethereum.rs  function_calls.rs  mod.rs  test_counter.rs  test_original.rs
tests/src/transforms/: cluster_shuffle.rs  determinism.rs  function_dispatcher.rs  jump_address.rs  mod.rs  opaque_predicate.rs  shuffle.rs  slot_shuffle.rs
