[workspace]
members = [ "crates/*", "tests", "examples"]
exclude = ["vendor/heimdall-rs"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.lints.clippy]
dbg-macro = "warn"
manual-string-new = "warn"
uninlined-format-args = "warn"
use-self = "warn"
redundant-clone = "warn"
missing-const-for-fn = "warn"
needless-continue = "warn"
redundant-pub-crate = "warn"
single-match-else = "warn"

[workspace.lints.rust]
rust-2018-idioms = "warn"
unreachable-pub = "warn"
unused-must-use = "warn"
redundant-lifetimes = "warn"
unnameable-types = "warn"
unused-crate-dependencies = "warn"
missing-debug-implementations = "warn"
missing-docs = "warn"

[workspace.lints.rustdoc]
all = "warn"

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3

[workspace.dependencies]
# Azoth crates
azoth-core = { version = "0.1.0", path = "crates/core" }
azoth-cli = { version = "0.1.0", path = "crates/cli" }
azoth-analysis = { version = "0.1.0", path = "crates/analysis" }
azoth-transform = { version = "0.1.0", path = "crates/transforms" }
azoth-verification = { version = "0.1.0", path = "crates/verification" }

# Ethereum
eot = { version = "0.1.5", features = ["serde", "unified-opcodes"] }
heimdall = { git = "https://github.com/Jon-Becker/heimdall-rs", package = "heimdall-disassembler", tag = "0.9.0" }
revm = { version = "29", features = ["std", "serde", "tracer"] }

# Async runtime
tokio = { version = "1.45", features = ["full"] }
async-trait = "0.1.88"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# CLI
clap = { version = "4.5", features = ["derive", "color", "suggestions"] }

# Cryptography
sha3 = "0.10"
tiny-keccak = { version = "2.0", features = ["keccak"] }
hex = "0.4"

# Data structures
petgraph = { version = "0.8", features = ["serde-1"] }
indexmap = { version = "2.10", features = ["serde"] }

# Math
num-bigint = { version = "0.4", features = ["serde"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.9", features = ["small_rng"] }
tempfile = "3.20"
paste = "1.0.15"
hex-literal = "1.0.0"

# Tracing and logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Formal verification
z3 = "0.12.1"

[patch."https://github.com/Jon-Becker/heimdall-rs"]
heimdall-decompiler = { path = "vendor/heimdall-rs/crates/decompile" }
heimdall-disassembler = { path = "vendor/heimdall-rs/crates/disassemble" }
heimdall-common = { path = "vendor/heimdall-rs/crates/common" }
heimdall-config = { path = "vendor/heimdall-rs/crates/config" }
heimdall-cache = { path = "vendor/heimdall-rs/crates/cache" }
heimdall-decoder = { path = "vendor/heimdall-rs/crates/decode" }
heimdall-vm = { path = "vendor/heimdall-rs/crates/vm" }
