[package]
name = "azoth-tests"
version.workspace = true
edition.workspace = true

[dependencies]
azoth-core.workspace = true
azoth-transform.workspace = true
azoth-analysis.workspace = true
azoth-verification.workspace = true
azoth-utils.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
hex.workspace = true
heimdall.workspace = true
tempfile.workspace = true
serde_json.workspace = true
petgraph.workspace = true
rand.workspace = true
color-eyre = "0.6"
revm.workspace = true
paste.workspace = true
hex-literal.workspace = true
