[package]
name = "azoth-analysis"
version = "0.1.0"
edition = "2024"

[dependencies]
azoth-core.workspace = true
azoth-transform.workspace = true
petgraph.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hex.workspace = true
thiserror.workspace = true
chrono.workspace = true

alloy = "1.1"
heimdall-decompiler = { git = "https://github.com/Jon-Becker/heimdall-rs", tag = "0.9.0" }
imara-diff = "0.2"
owo-colors = "4"
