[package]
name = "azoth-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "azoth"
path = "src/main.rs"

[dependencies]
async-trait.workspace = true
azoth-core = { path = "../core" }
azoth-transform = { path = "../transforms" }
clap = { workspace = true, features = ["derive"] }
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha3.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
ratatui = "0.29"
crossterm = "0.28"
