[package]
name = "azoth-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "azoth"
path = "src/main.rs"

[dependencies]
async-trait.workspace = true
azoth-core = { path = "../core" }
azoth-analysis = { path = "../analysis" }
azoth-transform = { path = "../transforms" }
azoth-tui = { path = "../tui" }
clap = { workspace = true, features = ["derive"] }
hex.workspace = true
owo-colors = "4"
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
