[package]
name = "azoth-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "azoth"
path = "src/main.rs"

[dependencies]
async-trait.workspace = true
azoth-core = { path = "../core" }
azoth-analysis = { path = "../analysis" }
azoth-transform = { path = "../transforms" }
azoth-tui = { path = "../tui" }
clap = { workspace = true, features = ["derive"] }
hex.workspace = true
owo-colors = "4"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true

# Fuzz command dependencies
chrono = "0.4"
parking_lot = "0.12"
rand = { workspace = true, features = ["small_rng"] }
revm.workspace = true
sha3 = "0.10"
