[package]
name = "azoth-core"
version = "0.1.0"
edition = "2024"

[dependencies]
eot.workspace = true
hex.workspace = true
heimdall.workspace = true
petgraph.workspace = true
rand.workspace = true
serde.workspace = true
sha3.workspace = true
thiserror.workspace = true
tiny-keccak.workspace = true
tracing.workspace = true
tokio.workspace = true
