[package]
name = "azoth-transform"
version.workspace = true
edition.workspace = true

[dependencies]
azoth-core = { path = "../core" }
rand.workspace = true
serde.workspace = true
sha3.workspace = true
tracing.workspace = true
thiserror.workspace = true
tracing-subscriber.workspace = true
hex.workspace = true
petgraph.workspace = true
tokio.workspace = true
serde_json.workspace = true
