[package]
name = "azoth-tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "azoth-tui"
path = "src/main.rs"

[dependencies]
azoth-core = { path = "../core" }
clap = { workspace = true, features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
