[package]
name = "azoth-verification"
version.workspace = true
edition.workspace = true

[dependencies]
azoth-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
hex.workspace = true
sha3.workspace = true
z3.workspace = true
num-bigint.workspace = true
indexmap.workspace = true
petgraph.workspace = true
eot.workspace = true
revm.workspace = true
